/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package coffeemahcine;


/**
 *
 * @author MoMO
 */
public class Counter {
    private int Counter;

    public Counter() {
        this.Counter = 0;
    }

    public int getCounter() {
        return Counter;
    }

    public void setCounter(int Counter) {
        this.Counter = Counter;
    }
    
    
}
