/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package coffeemahcine;
/**
 *
 * @author MoMO
 */
public interface Logger {
   public void log(String coffeeName , int waterTank, int beansafter) ;

}
